tests/ValidProofs/negI.fitch
|⊥
|---
||x
||---
||⊥ (R) 1
|¬x (¬I) 2-3