tests/InvalidRules/negI1%4.fitch
|---
||A
||B
||---
||⊥ (⊤I)
|¬A (¬I) 1-3
